# desk-grade-trading-system

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  GUIA_COMPLETA.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data_pipeline/: README.md  __init__.py
data_pipeline/cli/: __init__.py  ingest_ohlcv.py
data_pipeline/providers/: __init__.py  base.py  csv_provider.py  ibkr_provider.py  quantconnect_provider.py  tradingview_provider.py
desk_grade/: __init__.py  api.py  config.py  db.py  logging_config.py
examples/: __init__.py  example_usage.py
grafana/: README.md  grafana.ini
grafana/dashboards/: desk_grade_help.json  equity_and_pnl.json  positions.json  risk_monitoring.json  trade_metrics.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: postgres.yml
infra/: init.sql
portfolio/: __init__.py  advanced_metrics.py  exit_engine.py  exits.py  lifecycle_engine.py  metrics.py  order_builder.py  risk_layer.py
scripts/: __init__.py  health_check.py  ingest_from_ibkr.py  ingest_from_qc.py  init_db.py  reset_db.py  restart_grafana.py  run_risk_cycle.py  scheduler.py  seed_data.py  seed_trade_metrics_demo.py  serve_docs.py  status.py
tests/: __init__.py  test_metrics.py  test_risk_layer.py
